camo-derive/tests/fail/union.stderr
error: `camo` does not support unions
 --> tests/fail/union.rs:4:1
  |
4 | union Foo {
  | ^^^^^
